# TAP

motap/: .gitignore  Cargo.toml
motap/benches/: model_checking_bench.rs
motap/model_checking/: Cargo.toml
motap/model_checking/src/: lib.rs
motap/src/: evals.rs  main.rs  mdp_structures.rs  scratch.rs  speed_example.rs  team_mdp_structures.rs  tests.rs
motap/src/model_checking/: mod.rs  product_mdp.rs  s_automaton.rs  s_mdp.rs  s_scpm.rs  utils.rs
