[package]
name = "motap"
version = "0.1.0"
authors = ["tmrob2 <tmrob2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
itertools = "0.9.0"
#permutohedron = "0.2.4"
ndarray = "0.14.0"
lp-modeler = "0.4.3"
ordered-float = "2.0.1"
petgraph = "0.5.1"