[package]
name = "motap"
version = "0.1.0"
authors = ["tmrob2 <tmrob2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
itertools = "0.9.0"
#permutohedron = "0.2.4"
ndarray = "0.14.0"
ordered-float = "2.0.1"
petgraph = "0.5.1"
minilp = "0.2.2"
criterion = "0.3.3"
model_checking = {path="model_checking"}

[[bench]]
name = "model_checking_bench"
harness = false