[package]
name = "motap"
version = "0.1.0"
edition = "2018"
authors = ["Thomas Robinson <tmr463@uowmail.edu.au>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "evals"
harness = false
path = "src/evals.rs"

[[bin]]
name = "model_example"
path = "src/speed_example.rs"

[dependencies]
rand = "0.7.3"
csv = "1.1.5"
num-traits = "0.2.14"
array-macro = "2.1.0"
itertools = "0.10.0"
petgraph = "0.5.1"
#minilp = "0.2.2"
#lp-modeler = {version = "0.5.0", features=["native_coin_cbc"]}
gurobi = "0.3.4"
criterion = "0.3.3"
serde = {version = "1.0.117", features= ["derive"] }
serde_json = "1.0.59"
#lazy_static = "1.4.0"
regex = "1.5.4"
nalgebra = "0.29.0"
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-csv = "0.5.1"
ndarray-stats = "0.5.0"
num = "0.4.0"