[package]
name = "model_checking"
version = "0.1.0"
authors = ["tmrob2 <tmrob2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minilp = "0.2.2"
rand = "0.7.3"
ndarray = "0.14.0"
ordered-float = "2.0.1"
petgraph = "0.5.1"